# Mart-API

./: compose.yaml  solved projects of python
user-service/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
user-service/app/: main.py
user-service/app/config/: db.py  setting.py
user-service/app/kafka/: producer_consumer.py
user-service/app/models/: roles.py  token_model.py  user_model.py
user-service/app/protobuf/: user.proto  user_pb2.py
user-service/app/router/: auth.py  user.py
user-service/app/utils/: create_token.py  get_user.py  remove_space.py  security.py  send_email.py  verify_token.py  verify_user.py
